# c-practice.2

./: README.md  main.cpp  planetdata.txt  traindata.txt
lab1/: README  README.md  main.cpp
lab1/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
lab1/mymath/: CMakeLists.txt  mymath.cpp  mymath.h
laba2/: CMakeLists.txt  main.cpp
laba2/planet/: CMakeLists.txt  planet.cpp  planet.h
laba2/train/: CMakeLists.txt  train.cpp  train.h
